# git-dev-metrics

./: .coverage  .gitignore  AGENTS.md  AI-POWERED-GIT-WORKFLOWS.md  CONTEXT.md  IMPROVEMENTS.md  NVIM.md  README.md  ]  coverage.xml  format.sh  main.py  package-lock.json  pyproject.toml  run.sh  vision.md
.github/scripts/: executor.py  requirements.txt
.github/workflows/: ci.yml  executor.yml  feature-explorer.yml  maintenance-explorer.yml
.opencode/skills/improve-codebase-architecture/: SKILL.md
docs/adr/: 0000-template.md  0001-snapshot-and-cache.md  0002-sqlite-for-metric-storage.md  0003-graphql-over-rest.md  0004-wizard-driven-cli.md  0005-file-based-reports.md  0006-metric-pipeline-module-boundaries.md  0007-cache-module-boundaries.md
git_dev_metrics/: __init__.py  __main__.py  auth.py  cli.py  client.py  constants.py  date_utils.py  exceptions.py  graphql_client.py  main.py  printer.py  queries.py  query.py  reports.py  types.py
git_dev_metrics/auth/: __init__.py  github_auth.py  github_auth_cache.py
git_dev_metrics/cache/: __init__.py  cache.py  db.py  query.py
git_dev_metrics/cli/: __init__.py  _browser.py  _metrics.py  _month_arg.py  _options.py  _wizard.py  analyze.py  app.py  clear.py  dashboard.py  dashboard_runner.py  dashboard_wizard.py  logout.py  output.py  prompts.py  pull.py  pull_runner.py  pull_wizard.py  report.py  report_runner.py  report_wizard.py  runner.py  stale.py  summary.py  summary_wizard.py  trend.py  trend_runner.py  trend_wizard.py  validation.py
git_dev_metrics/cli/commands/: _resolve_range.py  app.py  clear.py  dashboard.py  lang_report.py  logout.py  nickname.py  pull.py  skill_report.py  stale.py  summary.py  targets.py  team_velocity.py  trend.py
git_dev_metrics/cli/runners/: _snapshot_format.py  _snapshot_runner.py  dashboard_runner.py  lang_runner.py  pull_runner.py  skill_runner.py  summary_runner.py  team_velocity_runner.py  trend_runner.py
git_dev_metrics/cli/utils/: _date_formatter.py
git_dev_metrics/cli/wizards/: _wizard.py  dashboard_wizard.py  lang_wizard.py  prompts.py  pull_wizard.py  skill_wizard.py  summary_wizard.py  team_velocity_wizard.py  trend_wizard.py
git_dev_metrics/github/: __init__.py  _response_mapper.py  api.py  auth.py  auth_cache.py  exceptions.py  graphql_client.py  graphql_queries.py  org_cache.py  queries.py
git_dev_metrics/metrics/: __init__.py  _ai_detection.py  _dev_repo_metrics.py  _health_ranking.py  _raw_metrics.py  _row_factory.py  _rows.py  _stale_pr.py  analyzer.py  anonymize.py  calculator.py  dev_printer.py  health.py  label_printer.py  lang_calculator.py  loader.py  printer.py  repo_printer.py  skill_calculator.py  snapshot.py  summary.py  team_velocity_calculator.py  trend_calculator.py
git_dev_metrics/metrics/printer/: __init__.py  _html_templates.py  base.py  bottleneck_printer.py  dev.py  html.py  html_printer.py  lang.py  printers.py  repo.py  skill.py  stale.py  stale_printer.py  team_velocity.py  trend.py  utils.py
git_dev_metrics/metrics/printer/templates/: dashboard.html  lang.html  skill.html  stale.html  team_velocity.html  trend.html
git_dev_metrics/models/: __init__.py  _mapping.py  types.py
git_dev_metrics/utils/: __init__.py  _mapping.py  _snapshot_format.py  config.py  date_utils.py
scripts/: feature-explorer.py  format.sh  query.sh  run.sh  test.sh  test_github_graphql.sh  test_github_rest.sh
tests/: __init__.py  conftest.py  test_cli.py  test_date_utils.py  test_exceptions.py  test_github.py  test_metrics.py  test_queries.py  test_reports.py
tests/integration/: __init__.py  conftest.py  test_cache_to_snapshot.py  test_github.py  test_pull_e2e.py
tests/integration/cassettes/: fetch_pull_requests.yaml  fetch_repositories.yaml
tests/unit/: conftest.py  test_anonymize.py  test_cache.py  test_cache_query.py  test_clear_command.py  test_cli.py  test_cli_no_subcommand.py  test_dashboard_command.py  test_dashboard_wizard.py  test_dev_repo_metrics.py  test_github.py  test_github_response_mapper.py  test_health.py  test_metrics.py  test_metrics_loader.py  test_printer_utils.py  test_prompts.py  test_pull_command.py  test_pull_wizard.py  test_report_command.py  test_report_wizard.py  test_snapshot.py  test_stale_command.py  test_summary_command.py  test_summary_wizard.py  test_trend_calculator.py  test_trend_command.py  test_trend_printer.py  test_utils.py
tests/unit/cache/: test_cache.py  test_cache_query.py
tests/unit/cli/: test_clear_command.py  test_cli_no_subcommand.py  test_dashboard_command.py  test_dashboard_wizard.py  test_nickname_command.py  test_pull_command.py  test_pull_wizard.py  test_stale_command.py  test_summary_command.py  test_summary_wizard.py  test_targets_command.py  test_trend_command.py  test_trend_printer.py
tests/unit/github/: test_github.py  test_github_fetch.py  test_github_pagination.py  test_github_queries.py  test_github_response_mapper.py  test_org_cache.py
tests/unit/metrics/: test__ai_detection.py  test__stale_pr.py  test_bot_login.py  test_cycle_time.py  test_dev_repo_metrics.py  test_health.py  test_health_ranking.py  test_metrics.py  test_metrics_loader.py  test_pickup_review_time.py  test_pr_metrics.py  test_row_factory.py  test_snapshot.py  test_trend_calculator.py
tests/unit/utils/: test_utils.py
