[project]
name = "git-dev-metrics"
version = "0.1.0"
description = "CLI tool for analyzing GitHub development metrics"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Jakob Jonasson"}]
requires-python = ">=3.14"
dependencies = [
    "keyring>=25.7.0",
    "pygithub>=2.8.1",
    "python-dateutil>=2.9.0.post0",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.3.1",
    "typer>=0.21.1",
]

[project.scripts]
app = "git_dev_metrics.cli:main"

[project.urls]
Repository = "https://github.com/kobbikobb/git-dev-metrics"

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "responses>=0.25.8",
    "ruff>=0.15.0",
    "vcrpy>=8.1.1",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"


[tool.uv]
package = true


[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (common bugs)
    "UP",   # pyupgrade (modernize syntax)
    "SIM",  # flake8-simplify
]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["git_dev_metrics"]

[tool.coverage.report]
fail_under = 60
