[project]
name = "git-dev-metrics"
version = "0.1.0"
description = "CLI tool for analyzing GitHub development metrics"
readme = "README.md"
license = "MIT"
authors = [{name = "Jakob Jonasson"}]
requires-python = ">=3.14"
dependencies = [
    "gql[requests]>=3.5.0",
    "jinja2>=3.1.5",
    "keyring>=25.7.0",
    "pypi>=2.1",
    "python-dateutil>=2.9.0.post0",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.3.1",
    "typer>=0.21.1",
    "vulture>=2.16",
]

[project.scripts]
app = "git_dev_metrics.main:main"

[project.urls]
Repository = "https://github.com/kobbikobb/git-dev-metrics"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pip-audit>=2.10.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "responses>=0.25.8",
    "ruff>=0.15.0",
    "vcrpy>=8.1.1",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"


[tool.uv]
package = true
override-dependencies = ["idna>=3.15"]


[tool.setuptools.packages.find]
exclude = ["metrics_results", "tests*"]

[tool.setuptools]
license-files = ["LICENSE"]


[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "B",     # flake8-bugbear (common bugs)
    "UP",    # pyupgrade (modernize syntax)
    "SIM",   # flake8-simplify
    "C901",  # max function complexity (nesting/branching)
    "RUF022",# sorted __all__
    "RET501",# unnecessary return None
    "PERF401",# list comprehension
    "PTH123", # Path.open()
    "TRY300", # try/except/else
    "PT",    # pytest-style
    "T20",   # print/pprint detection
]
ignore = [
    "B008",  # typer.Option() in argument defaults is required
    "PT019", # fixture value IS used in test body (false positive on autouse fixtures with mocker)
]

[tool.ruff.lint.mccabe]
max-complexity = 10  # Rule 2: max nesting/branching depth

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"

[tool.vulture]
paths = ["git_dev_metrics"]
min_confidence = 80
ignore_decorators = ["@app.callback", "@app.command"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["git_dev_metrics"]

[tool.coverage.report]
fail_under = 60
